--- a/client/app/assets/scss/app.scss
+++ b/client/app/assets/scss/app.scss
@@ -9,7 +9,7 @@
 
 @import "views/header";
 @import "views/footer";
-@import "views/welcome-page";
+@import "views/login";
 @import "views/homepage";
 
 
