feat: save data from post in the DB

--- a/client/app/view/form/form.html
+++ b/client/app/view/form/form.html
@@ -3,7 +3,7 @@
 
 <div class="form-container col-xs-12 col-sm-offset-3 col-sm-6">
 
-  <form ng-submit="formSubmit()" novalidate>
+  <form name="dataForm" ng-submit="formSubmit(dataForm)" novalidate>
     <div class="form-group">
       <input type="text" class="form-control" id="user-name" placeholder="{{userName}}" disabled>
     </div>
