--- a/client/app/assets/scss/app.scss
+++ b/client/app/assets/scss/app.scss
@@ -11,7 +11,8 @@
 @import "views/footer";
 @import "views/login";
 @import "views/homepage";
-@import "views/form";
+@import "views/tracking";
+@import "views/data";
 
 
 html {
@@ -27,6 +28,29 @@ html {
 }
 body {
   background: none;
+}
+
+.loader-container {
+  margin-top: 50px;
+  text-align: center;
+  .loader {
+    font-size: 20px;
+  }
+}
+
+.no-data {
+  text-align: center;
+  margin-bottom: 0px;
+  padding-bottom: 10px;
+}
+
+.button-get-all-data-container {
+  text-align: center;
+  margin-bottom: 0px;
+  padding-bottom: 20px;
+  button {
+    font-size: 14px;
+  }
 }
 
 // Override Global Buttons style
