--- a/client/app/view/home/home.html
+++ b/client/app/view/home/home.html
@@ -1,4 +1,27 @@
 <div class="container page home-page fadein-effect">
 
-<h1>Home</h1>
+  <h3>Lastest tracked equipment</h3>
+  <div class="loader-container">
+    <span class="loader"><i class="fa fa-spinner" aria-hidden="true"></i></span>
+  </div>
+
+  <section class="data-container container">
+    <ul class="row">
+      <li class="data-element col-xs-12 col-sm-4 fadein-effect" ng-repeat="element in data | toArray | orderBy:'-date' ">
+        <div class="inner-container">
+          <h3 class="equipment">Equipment: <b>{{element.equipment}}</b></h3>
+          <h3 class="serial">Serial: <b>{{element.serial}}</b></h3>
+          <h4 class="username">By {{element.userName}}</h4>
+          <h4 class="date">{{element.date | date : 'd MMM y, HH:mm'}}</h4>
+          <p class="title">location</p>
+          <p class="content location">{{element.location}}</p>
+          <p class="title">Activity</p>
+          <p class="content activity">{{element.activity}}</p>
+          <p class="title">Details</p>
+          <p class="content details">{{element.details}}</p>
+        </div>
+      </li>
+    </ul>
+  </section>
+
 </div>
