feat: add search by equipment and related serial

--- a/client/app/view/header/header.html
+++ b/client/app/view/header/header.html
@@ -17,6 +17,7 @@
         <ul class="nav navbar-nav navbar-left" bs-active-link ng-hide="location.path().startsWith('/subscription')">
           <li ng-show='!user'><a href="#/login" title="Login" data-toggle="collapse" data-target=".navbar-collapse.in">Login</a></li>
           <li ng-show='user' class="active"><a href="#/" title="Home page" data-toggle="collapse" data-target=".navbar-collapse.in">Home</a></li>
+          <li ng-show='user'><a href="#/search" title="Home page" data-toggle="collapse" data-target=".navbar-collapse.in">Search</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
