--- a/client/app/view/home/home.html
+++ b/client/app/view/home/home.html
@@ -13,7 +13,7 @@
           <h3 class="serial">Serial: <b>{{element.serial}}</b></h3>
           <h4 class="username">By {{element.userName}}</h4>
           <h4 class="date">{{element.date | date : 'd MMM y, HH:mm'}}</h4>
-          <p class="title">location</p>
+          <p class="title">Location</p>
           <p class="content location">{{element.location}}</p>
           <p class="title">Activity</p>
           <p class="content activity">{{element.activity}}</p>
