--- a/client/app/view/footer/footer.html
+++ b/client/app/view/footer/footer.html
@@ -1,8 +1,7 @@
 <div class="inner-footer-container">
   <div class="footer-links container">
     <ul>
-      <li><a href="">Link A</a></li>
-      <li><a href="">Link B</a></li>
+      <li>Safran Tracker</li>
     </ul>
   </div>
 </div>
