--- a/client/app/view/header/header.html
+++ b/client/app/view/header/header.html
@@ -21,7 +21,7 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li ng-show='user'><a href="" class="no-pointer">{{ user.userName }}</a></li>
+          <li ng-show='user' class="username"><a href="" class="no-pointer">{{ user.userName }}</a></li>
           <li ng-show='user' role="separator" class="divider"><a href="" class="no-pointer">|</a></li>
           <li ng-show='user'><a href="" data-toggle="collapse" data-target=".navbar-collapse.in" ng-click='logout()'>Logout</a></li>
         </ul>
