--- a/client/app/view/search/search.html
+++ b/client/app/view/search/search.html
@@ -1,6 +1,6 @@
 <div class="search-page page container">
-<h2>Search by Equipment</h2>
 
+<h3>Search by Equipment</h3>
 <form class="equipment-form form-inline" name="equipmentForm" novalidate ng-submit="searchEquipement(equipmentForm)">
   <div class="form-group">
     <input type="text" class="form-control" id="equipement" placeholder="Equipment" ng-model="equipment" required>
@@ -9,9 +9,9 @@
 </form>
 
 <section class="serial-list fadeIn-effect" ng-show="hasEquipment">
-<h2>List of serials for equipment {{equipment}}</h2>
+<h3>List of serials for equipment {{equipment}}</h3>
 <h6>Click on a serial to go to the tracking page</h6>
-<label>Search: <input ng-model="searchText"></label>
+<label class="filter-form">Search: <input ng-model="searchText" placeholder="Filter"></label>
   <ul>
     <li class="serial" ng-repeat="serial in serials | orderBy: '-serial' | filter:searchText">
       <a href="#/tracking?equipment={{equipment}}&serial={{serial}}">{{serial}}</a>
