--- a/client/app/assets/scss/app.scss
+++ b/client/app/assets/scss/app.scss
@@ -56,11 +56,22 @@ body {
 
 // Override Global Buttons style
 .btn.active,
-.connect-btn,
-.btn-primary {
+.btn-primary,
+button[type="submit"] {
   background-color: $secondaryColor !important;
   border: none !important;
   box-shadow: none !important;
+  color: $whiteColor;
+  &:hover {
+    color: $whiteColor;
+  }
+}
+
+button[type="submit"] {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 50%;
 }
 
 // Style for all pages
@@ -85,6 +96,6 @@ body {
 .cf:after {
     content: " "; /* 1 */
     display: table; /* 2 */
-}
-.cf:after {clear: both;}
-.cf {*zoom: 1;}
+  }
+  .cf:after {clear: both;}
+  .cf {*zoom: 1;}
