--- a/client/app/assets/scss/views/_footer.scss
+++ b/client/app/assets/scss/views/_footer.scss
@@ -10,8 +10,9 @@
         li {
           display: inline-block;
           padding: 0px 10px;
+          color: $whiteColor;
           a {
-            color: #FFF;
+            color: $whiteColor;
           }
         }
       }
