--- a/client/app/assets/scss/views/_login.scss
+++ b/client/app/assets/scss/views/_login.scss
@@ -1,3 +1,10 @@
 .login-signup-page {
-  
+  .button-container {
+    margin: 10px auto 30px;
+    text-align: center;
+    button {
+      border: none;
+      color: $whiteColor;
+    }
+  }
 }
