--- a/client/app/assets/scss/views/_tracking.scss
+++ b/client/app/assets/scss/views/_tracking.scss
@@ -13,7 +13,7 @@
       form {
         &.ng-submitted {
           .ng-invalid {
-            border-color: red;
+            border-color: #FF0000;
             border-width: 2px;
           }
         }
@@ -28,7 +28,7 @@
           &.serial {
             margin-bottom: 10px;
             padding-bottom: 10px;
-            border-bottom: 1px solid #CCC;
+            border-bottom: 1px solid $lightGreyColor;
           }
         }
         button {
