--- a/client/app/view/login/login.html
+++ b/client/app/view/login/login.html
@@ -7,7 +7,7 @@
 
     <div class="forms-container container"  >
 
-      <div class="form-container col-xs-12 col-sm-offset-3 col-sm-6 login-container" ng-show="LoS">
+      <div class="form-container col-xs-12 col-sm-offset-3 col-sm-6 login-container fadein-effect" ng-hide="LoS">
         <form class="login-form" ng-submit="login()">
           <div class="form-group">
             <label>Email address</label>
@@ -22,7 +22,7 @@
         </form>
       </div>
 
-      <div class="form-container col-xs-12 col-sm-offset-3 col-sm-6 signup-container"  ng-hide="LoS">
+      <div class="form-container col-xs-12 col-sm-offset-3 col-sm-6 signup-container fadein-effect"  ng-show="LoS">
         <form class="signup-form" ng-submit="createUser()">
           <div class="form-group">
             <label>Full Name</label>
