--- a/client/app/view/login/login.html
+++ b/client/app/view/login/login.html
@@ -46,7 +46,7 @@
           <p class="error" ng-if="signupError"><strong>{{signupError}}</strong></p>
 
           <p class="error" ng-if="error"><strong>{{ error.message }}</strong></p>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default signup-submit">Submit</button>
         </form>
       </div>
 
