fix: style on home page, remove unused files

--- a/client/app/view/home/home.html
+++ b/client/app/view/home/home.html
@@ -1,6 +1,6 @@
 <div class="container page home-page fadein-effect">
 
-  <h4 class='title'>Lastest tracked equipments</h4>
+  <h4 class='page-title'>Lastest tracked equipments</h4>
   <div class="loader-container">
     <span class="loader"><i class="fa fa-spinner" aria-hidden="true"></i></span>
   </div>
