feat: add style switch option on tracking page

--- a/client/app/assets/scss/views/_tracking.scss
+++ b/client/app/assets/scss/views/_tracking.scss
@@ -1,4 +1,14 @@
 .tracking-page {
+
+  .change-style {
+    position: absolute;
+    top: 52px;
+    left: 0px;
+    border: none;
+    background-color: #EEE;
+    border-radius: 5px;
+  }
+
   .button-modal-container {
     margin-top: 10px;
     text-align: center;
