--- a/client/app/assets/scss/views/_data.scss
+++ b/client/app/assets/scss/views/_data.scss
@@ -1,51 +1,98 @@
-  .data-container {
+.data-container {
+  ul {
+    .data-element {
+      padding: 10px;
+      .inner-container {
+        border-radius: 5px;
+        border: 1px solid $lightGreyColor;
+        padding: 10px;
+        .product-infos {
+          background-color: $secondaryColor;
+          color: $whiteColor;
+          padding: 10px 10px;
+          border-radius: 5px;
+          h3 {
+            font-size: 14px;
+            margin: 0px 0px;
+            word-break: break-all;
+            &.serial {
+              margin-top: 7px;
+            }
+          }
+        }
+        h4 {
+          font-size: 12px;
+          margin: 5px 0px;
+          word-break: break-all;
+        }
+        .title {
+          font-size: 14px;
+          border-bottom: 1px solid $lightGreyColor;
+          font-weight: bold;
+        }
+        .username {
+          margin-top: 10px;
+        }
+        .date {
+          margin-bottom: 15px;
+        }
+        .details {
+          height: 80px;
+          overflow: scroll;
+          word-break: break-word;
+          white-space: pre-wrap;
+          padding: 10px;
+          border-radius: 5px;
+          background-color: #F4F4F4;
+        }
+      }
+    }
+  }
+  &.tab-style {
     ul {
       .data-element {
-        padding: 10px;
+        padding-bottom: 0px;
+        padding-top: 0px;
+        width: 100%;
         .inner-container {
-          border-radius: 5px;
-          border: 1px solid $lightGreyColor;
-          padding: 10px;
+          margin: 10px auto;
+          width: 100%;
+          max-width: 500px;
+          border-radius: 0px;
           .product-infos {
-            background-color: $secondaryColor;
-            color: $whiteColor;
-            padding: 10px 10px;
-            border-radius: 5px;
             h3 {
-              font-size: 14px;
-              margin: 0px 0px;
-              word-break: break-all;
-              &.serial {
-                margin-top: 7px;
+              display: inline-block;
+              &.equipment {
+                margin-right: 10px;
               }
             }
           }
-          h4 {
-            font-size: 12px;
-            margin: 5px 0px;
-            word-break: break-all;
-          }
-          .title {
-            font-size: 14px;
-            border-bottom: 1px solid $lightGreyColor;
-            font-weight: bold;
-          }
           .username {
-            margin-top: 10px;
+            display: inline-block;
+            margin-right: 10px;
           }
           .date {
-            margin-bottom: 15px;
+            display: inline-block;
+          }
+          .title, .content {
+            display: inline-block;
+          }
+          .title {
+            width: 60px;
+            border: none;
+            &::before {
+              content:"";
+              display: block;
+            }
           }
           .details {
-            height: 80px;
-            overflow: scroll;
-            word-break: break-word;
-            white-space: pre-wrap;
-            padding: 10px;
-            border-radius: 5px;
-            background-color: #F4F4F4;
+            display: block;
+          }
+          .details-title {
+            display:none;
           }
         }
       }
     }
   }
+}
