--- a/client/app/view/tracking/tracking.html
+++ b/client/app/view/tracking/tracking.html
@@ -4,6 +4,8 @@
     <span class="loader"><i class="fa fa-spinner" aria-hidden="true"></i></span>
   </div>
 
+  <button class="change-style" ng-click="changeStyle()">Style</button>
+
   <!-- Button trigger modal -->
   <div class="button-modal-container fadein-effect" ng-show="contentLoading">
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#form-modal">
@@ -21,11 +23,14 @@
           </div>
           <h4 class="username">By <b>{{element.userName}}</b></h4>
           <h4 class="date">{{element.date | date : 'd MMM y, HH:mm'}}</h4>
+          <div class="split"></div>
           <p class="title">Location</p>
           <p class="content location">{{element.location}}</p>
+          <div class="split"></div>
           <p class="title">Activity</p>
           <p class="content activity">{{element.activity}}</p>
-          <p class="title">Details</p>
+          <div class="split"></div>
+          <p class="title details-title">Details</p>
           <p class="content details">{{element.details}}</p>
         </div>
       </li>
