style: second data style improvment on tracking page

--- a/client/app/view/tracking/tracking.html
+++ b/client/app/view/tracking/tracking.html
@@ -26,7 +26,7 @@
           <div class="split"></div>
           <p class="title">Location</p>
           <p class="content location">{{element.location}}</p>
-          <div class="split"></div>
+          <div class="split inline">|</div>
           <p class="title">Activity</p>
           <p class="content activity">{{element.activity}}</p>
           <div class="split"></div>
