--- a/client/app/assets/scss/views/_data.scss
+++ b/client/app/assets/scss/views/_data.scss
@@ -45,6 +45,9 @@
           border-radius: 5px;
           background-color: #F4F4F4;
         }
+        .split {
+          display: none;
+        }
       }
     }
   }
@@ -55,11 +58,15 @@
         padding-top: 0px;
         width: 100%;
         .inner-container {
+          border-top: none;
+          padding: 0px;
           margin: 10px auto;
           width: 100%;
           max-width: 500px;
           border-radius: 0px;
           .product-infos {
+            padding: 3px 10px 5px;
+            border-radius: initial;
             h3 {
               display: inline-block;
               &.equipment {
@@ -67,15 +74,14 @@
               }
             }
           }
-          .username {
+          .username, .date {
             display: inline-block;
-            margin-right: 10px;
-          }
-          .date {
-            display: inline-block;
+            margin-left: 10px;
           }
           .title, .content {
             display: inline-block;
+            padding-left: 10px;
+            padding-right: 10px;
           }
           .title {
             width: 60px;
@@ -87,9 +93,17 @@
           }
           .details {
             display: block;
+            border-radius: initial;
+            margin-bottom: 0px;
           }
           .details-title {
             display:none;
+          }
+          .split {
+            display: block;
+            &.inline {
+              display: inline-block;
+            }
           }
         }
       }
